@@ -1,40 +1,0 @@
-/*
-
- Package: dyncall
- Library: autovar
- File: autovar/autovar_OSFAMILY.h
- Description: 
- License:
-
-   Copyright (c) 2011-2018 Daniel Adler <dadler@uni-goettingen.de>,
-                           Tassilo Philipp <tphilipp@potion-studios.com>
-
-   Permission to use, copy, modify, and distribute this software for any
-   purpose with or without fee is hereby granted, provided that the above
-   copyright notice and this permission notice appear in all copies.
-
-   THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
-   WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
-   MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
-   ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
-   WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
-   ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
-   OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
-
-*/
-
-#ifndef AUTOVAR_OSFAMILY_H
-#define AUTOVAR_OSFAMILY_H
-
-#include "autovar_OS.h"
-
-#if defined(OS_Win32) || defined(OS_Win64)
-#define OSFAMILY_Windows
-#elif defined(OS_NDS) || defined(OS_PSP)
-#define OSFAMILY_GameConsole
-#else
-#define OSFAMILY_Unix
-#endif
-
-#endif /* AUTOVAR_OSFAMILY_H */
-
