@@ -231,6 +231,23 @@
 #endif
 
 
+/* -- Executable/object file formats. ------------------------------- */
+
+#if defined(DC__OS_Win32) || defined(DC__OS_Win64) || defined(DC__OS_Cygwin) || defined(DC__OS_MinGW)
+# define DC__Obj_PE
+#elif defined(DC__OS_Darwin)
+# define DC__Obj_Mach
+#elif !defined(DC__OS_Minix) || defined(__ELF__) /* Minix >= 3.2 (2012) uses ELF */
+# define DC__Obj_ELF
+# if defined(__LP64__) || defined(_LP64)
+#   define DC__Obj_ELF64
+# else
+#   define DC__Obj_ELF32
+# endif
+#else
+# define DC__Obj_Unknown
+#endif
+
 
 /* -- Misc machine-dependent modes, ABIs, etc. ---------------------- */
 
@@ -277,7 +294,6 @@
 #  define DC__ABI_PPC64_ELF_V 0 /* 0 means not explicitly set, otherwise this is 1 (big endian) and 2 (little endian) */
 # endif
 #endif /* PPC64 */
-
 
 
 /* -- Endianness detection ------------------------------------------ */
