@@ -26,12 +26,12 @@
 
 
 #include "dynload.h"
-#include "../autovar/autovar_ABI.h"
-#if defined(ABI_PE)
+#include "../dyncall/dyncall_macros.h"
+#if defined(DC__Obj_PE)
 #include "dynload_syms_pe.c"
-#elif defined(ABI_Mach)
+#elif defined(DC__Obj_Mach)
 #include "dynload_syms_mach-o.c"
-#elif defined(ABI_ELF)
+#elif defined(DC__Obj_ELF)
 #include "dynload_syms_elf.c"
 #endif
 
