@@ -26,8 +26,8 @@
 
 
 #define BEGIN_ASM	.text
-#include "../autovar/autovar_OS.h"
-#if defined(OS_Darwin)
+#include "../dyncall/dyncall_macros.h"
+#if defined(DC__OS_Darwin)
 #define GLOBAL_C(X) .globl _##X
 #define ENTRY_C(X) _##X:
 #else
